Add Chronicle-required --add-exports to `pal run` command